fixed spacing on author page

--- a/less/style.less
+++ b/less/style.less
@@ -133,6 +133,7 @@ article.author {
 }
 .author-container {
 	&.large {
+		margin-bottom: 25px;
 		img {
 			width: 100px;
 			margin-right: 25px;
